Fixed 'View Atlas' filters on narrow screen.
- There's no need for a flex-direction, just let them wrap.

--- a/app/css/dataflow-atlas-base.css
+++ b/app/css/dataflow-atlas-base.css
@@ -969,10 +969,6 @@ button.card-action-btn.mini {
         grid-template-columns: 1fr;
     }
 
-    .atlas-controls {
-        flex-direction: column;
-    }
-
     .atlas-grid {
         grid-template-columns: 1fr;
     }
